# minirouter

./: .gitignore  CONTRIBUTOIN.md  README.md  secrets.env.example
benchmarks/: __init__.py  bbh.py  bfcl.py  bfcl_simple.py  gsm8k.py  humaneval.py  ifeval.py  livecodebench.py  rlpr.py
configs/: benchmarks.yaml  models.chutes.light.yaml  models.chutes.yaml  models.minibridge.light.yaml  models.openrouter-chutes.yaml  models.openrouter.light.yaml  models.openrouter.yaml  models.yaml  trinity.yaml
docs/: IMPROVEMENTS.md  JOURNAL.md  PAPER_NOTES.md  RESULTS.md  SPEC.md  SPEC_REVIEW.md
scripts/: agreement_diagnostic.py  fugu_grpo_train.py  (+8 more)
validator/: .gitignore  README.md  pyproject.toml  secrets.env.example
validator/src/eval_backend/: __init__.py  db.py  main.py  mock_leaderboard.py  models.py  schemas.py  seed_mock_data.py  worker.py
validator/src/eval_backend/api/: __init__.py  routes.py
validator/src/eval_backend/core/: config.py
validator/src/eval_backend/services/: __init__.py  eval_runner.py  github.py  queue.py  runtime_config.py  source_fetch.py  storage.py  train_runner.py
validator/tests/: conftest.py  test_config.py  test_delete_evaluation.py  test_ensure_schema.py  test_eval_runner.py  test_eval_runner_fallback.py  test_eval_runner_remote_host.py  test_github_infra_pr.py  test_github_submission.py  test_leaderboard.py  test_progress_visibility.py  test_publish_submission_result.py  test_runtime_command_templates.py  test_runtime_config.py  test_submission_schema.py  test_submit_sync_eval_gate.py  test_worker.py  test_worker_exit.py
(+141 files in other folders)
